Header minor fix on narrow

--- a/css/global.css
+++ b/css/global.css
@@ -321,7 +321,7 @@ left: 0px;
 }
 
 #block-block-1{
-
+    min-width: 180px;
 right: 0px;
 }
 
@@ -1388,7 +1388,7 @@ display: flex;
     margin-left: 10%;
     border: 1px solid #808080;
     width: 80%;
-    margin-right: 175px;
+
   }
   .islandora-pdf-metadata, .islandora-large-image-metadata {
     display: block;
